# auto-webp-converter

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  shared_dependencies.md  tsconfig.json  webpack.config.js
extension/: background.js  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  styles.css
rust/: Cargo.toml
rust/src/: converter.rs  image_converter.rs  lib.rs  main.rs  web_scraper.rs
rust/src/tests/: utils_tests.rs
scripts/: build.js  clean.js  compile_wasm.js  test.js
src/: background.js  background.ts  content.js  content.ts  converter.rs  lib.rs  main.rs  manifest.json  options.html  options.js  options.ts  popup.html  popup.js  popup.ts  settings.rs  utils.rs  utils.ts
src/rust_to_wasm/: Cargo.toml  build.rs  wasm_module.rs
src/styles/: options.css  popup.css
src/tests/: converter_tests.rs  main_tests.rs  mod.rs  utils_tests.rs
