[package]
name = "auto-webp-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
reqwest = "0.11.6"
scraper = "0.17.1"
wasm-bindgen = "0.2.76"
image = "0.24.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen-test = "0.3.37"
web-sys = "0.3.64"
js-sys = "0.3.51"
avif-parse = "1.0.0"