[package]
name = "auto-webp-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
reqwest = "0.11.6"
scraper = "0.17.1"
wasm-bindgen = "0.2.76"

