[package]
name = "wasm_module"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.51"
features = [
  "Document",
  "Window",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
